[workspace]
members = ["patch", "launcher"]

resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
windows = { version = "0.54.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
] }
anyhow = "1.0.81"
ilhook = "2.1.0"
